firmware/lib/control-table/tests/ui/compare_on_non_primitive.stderr
error: compare clauses require a primitive integer (u8/u16/i8/i16/i32)
 --> tests/ui/compare_on_non_primitive.rs:7:8
  |
7 |     x: [u8; 4],
  |        ^^^^^^^
